--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
       </main>
       <hr class="bottom-line">
       <footer>
-        <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
-        </p>
         <p class="address">Avda. De La Aviación 24, Madrid, Spain</p>
+        <p class="established">+34 634713429</p>
       </footer>
     </div>
   </body>
